jq-01 first commit

--- a/Jquerydemo/Web.config
+++ b/Jquerydemo/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="Jquerydemo" connectionString="Url = http://localhost:8080;Database=Jquerydemo" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
