--- a/Jquerydemo/packages.config
+++ b/Jquerydemo/packages.config
@@ -22,6 +22,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.6.2" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
+  <package id="RavenDB.Client" version="3.5.1" targetFramework="net46" />
+  <package id="RavenDB.Database" version="3.5.1" targetFramework="net46" />
+  <package id="RavenDB.Embedded" version="3.5.1" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
