--- a/Jquerydemo/Jquerydemo.csproj
+++ b/Jquerydemo/Jquerydemo.csproj
@@ -244,6 +244,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Selectordemo.cshtml" />
     <Content Include="Views\Home\JqMethods.cshtml" />
+    <Content Include="Views\Home\TraversingDom.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
